Fix theme toggle knob top alignment in globals.css

--- a/app/globals.css
+++ b/app/globals.css
@@ -255,7 +255,7 @@ body {
 
 #theme-toggle [class*="slideKnob"] {
   position: absolute !important;
-  top: -4px !important;
+  top: 0px !important;
   left: 0 !important;
   width: 37px !important;
   height: 37px !important;
